# Hackathon-II-Phase-I

./: README.md  pyproject.toml
.claude/agents/: todo-app-reviewer.md
.specify/memory/: constitution.md
history/prompts/001-console-todo-app/: 001-phase-i-console-todo-specification.spec.prompt.md  002-phase-i-architecture-planning.plan.prompt.md  003-phase-i-task-breakdown.tasks.prompt.md  004-phase-i-implementation-complete.green.prompt.md
history/prompts/constitution/: 001-initial-constitution-ratification.constitution.prompt.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/checklists/: requirements.md
specs/001-console-todo-app/contracts/: todo_service.md
src/: __init__.py  main.py
src/cli/: __init__.py  app.py  parser.py  renderer.py
src/models/: __init__.py  todo.py
src/services/: __init__.py  todo_service.py
tests/manual/: test_scenarios.md
